--- a/style.css
+++ b/style.css
@@ -1,266 +1,266 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Roboto", sans-serif;
-    list-style: none;
-    text-decoration: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  list-style: none;
+  text-decoration: none;
 }
-:root{
-    --bg-color: #0c0c0c;
-    --text-color: #fff;
-    --main-color: #ae8957;
+:root {
+  --bg-color: #0c0c0c;
+  --text-color: #fff;
+  --main-color: #ae8957;
 
-    --big-font: 6.6rem;
-    --p-font: 1rem
+  --big-font: 6.6rem;
+  --p-font: 1rem;
 }
-body{
-    background: var(--bg-color);
-    color: var(--text-color);
+body {
+  background: var(--bg-color);
+  color: var(--text-color);
 }
-header{
-    position: fixed;
-    top: 0;
-    right: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 1000;
-    padding: 35px 7%;
-    width: 100%;
-    transition: all .50s ease;
+header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 1000;
+  padding: 35px 7%;
+  width: 100%;
+  transition: all 0.5s ease;
 }
-.logo img{
-    width: 100%;
-    height: auto;
+.logo img {
+  width: 100%;
+  height: auto;
 }
-.navlist{
-    display: flex;
+.navlist {
+  display: flex;
 }
-.navlist a{
-    display: inline-block;
-    margin:0 35px;
-    color: var(--text-color);
-    font-size: var(--p-font);
-    transition: all .6s ease;
+.navlist a {
+  display: inline-block;
+  margin: 0 35px;
+  color: var(--text-color);
+  font-size: var(--p-font);
+  transition: all 0.6s ease;
 }
-.navlist a:hover{
-    color: var(--main-color);
+.navlist a:hover {
+  color: var(--main-color);
 }
-.right-content{
-    display: flex;
-    align-items: center;
+.right-content {
+  display: flex;
+  align-items: center;
 }
-.nav-btn{
-    display: inline-block;
-    padding: 9px 24px;
-    background: transparent;
-    border-radius: 7px;
-    border: 2px solid var(--text-color);
-    font-size: 15px;
-    font-weight: 500;
-    color: var(--text-color);
-    transition: all .6s ease;
+.nav-btn {
+  display: inline-block;
+  padding: 9px 24px;
+  background: transparent;
+  border-radius: 7px;
+  border: 2px solid var(--text-color);
+  font-size: 15px;
+  font-weight: 500;
+  color: var(--text-color);
+  transition: all 0.6s ease;
 }
-.nav-btn:hover{
-    transform: translateY(-5px);
-    border: 2px solid var(--main-color);
-    ;
-    color: var(--main-color);
+.nav-btn:hover {
+  transform: translateY(-5px);
+  border: 2px solid var(--main-color);
+  color: var(--main-color);
 }
-#menu-icon{
-    font-size: 42px;
-    margin-left: 25px;
-    z-index: 1001;
-    cursor: pointer;
-    display: none;
+#menu-icon {
+  font-size: 42px;
+  margin-left: 25px;
+  z-index: 1001;
+  cursor: pointer;
+  display: none;
 }
-section{
-    padding: 0 14%;
+section {
+  padding: 0 14%;
 }
-.hero{
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    background: url(./images/bg.png);
-    background-size: cover;
-    background-position: center;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    gap: 2rem;
+.hero {
+  position: relative;
+
+  width: 100%;
+  height: 100vh;
+  background: url(./images/bg.png);
+  background-size: cover;
+  background-position: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  gap: 2rem;
 }
-.hero-img img{
-    width: 100%;
-    height: auto;
+.hero-img img {
+  width: 100%;
+  height: auto;
 }
-.hero-img img:hover{
-    transition: all .6s ease;
+.hero-img img:hover {
+  transition: all 0.6s ease;
 }
-.hero-text h1{
-    font-size: 80px;
-    font-weight: 900;
-    margin: 15px 0;
+.hero-text h1 {
+  font-size: 80px;
+  font-weight: 900;
+  margin: 15px 0;
 }
-.hero-text h5{
-    font-size: 15px;
-    font-weight: 400;
-    letter-spacing: 1px;
+.hero-text h5 {
+  font-size: 15px;
+  font-weight: 400;
+  letter-spacing: 1px;
 }
-.hero-text p{
-    width: 100%;
-    max-width: 620px;
-    font-size: var(--p-font);
-    font-weight: 400;
-    color: var(--text-color);
-    line-height: 32px;
-    margin-bottom: 40px;
+.hero-text p {
+  width: 100%;
+  max-width: 620px;
+  font-size: var(--p-font);
+  font-weight: 400;
+  color: var(--text-color);
+  line-height: 32px;
+  margin-bottom: 40px;
 }
-.main-hero{
-    display: flex;
-    align-items: center;
+.main-hero {
+  display: flex;
+  align-items: center;
 }
-.btn{
-    display: inline-block;
-    padding: 13px 25px;
-    background: var(--main-color);
-    border: 2px solid transparent;
-    border-radius: 7px;
-    color: var(--text-color);
-    font-size: 15px;
-    font-weight: 500;
-    transition: all .6s ease;
-    margin-right: 20px;
+.btn {
+  display: inline-block;
+  padding: 13px 25px;
+  background: var(--main-color);
+  border: 2px solid transparent;
+  border-radius: 7px;
+  color: var(--text-color);
+  font-size: 15px;
+  font-weight: 500;
+  transition: all 0.6s ease;
+  margin-right: 20px;
 }
-.btn:hover{
-    transform: scale(1.1);
+.btn:hover {
+  transform: scale(1.1);
 }
-.price{
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    font-size: 28px;
-    color: var(--text-color);
-    gap: 10px;
+.price {
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  font-size: 28px;
+  color: var(--text-color);
+  gap: 10px;
 }
-.price span{
-    font-size: 17px;
-    color: var(--main-color);
-    font-weight: 400;
+.price span {
+  font-size: 17px;
+  color: var(--main-color);
+  font-weight: 400;
 }
-.icons{
-    position: absolute;
-    top: 50%;
-    padding: 0 7%;
-    transform: translateY(-50%);
+.icons {
+  position: absolute;
+  top: 50%;
+  padding: 0 7%;
+  transform: translateY(-50%);
 }
-.icons i{
-    display: block;
-    margin: 20px;
-    color: var(--text-color);
-    font-size: 20px;
-    transition: all.6s;
+.icons i {
+  display: block;
+  margin: 20px;
+  color: var(--text-color);
+  font-size: 20px;
+  transition: all.6s;
 }
-.icons i:hover{
-    color: var(--main-color);
-    transition: all .6s ease;
+.icons i:hover {
+  color: var(--main-color);
+  transition: all 0.6s ease;
 }
 @media (max-width: 1770px) {
-    header{
-        padding: 22px 4%;
-    }
-    .icons{
-        padding: 0 4%;
-    }
-    .scroll{
-        right: 4%;
-    }
+  header {
+    padding: 22px 4%;
+  }
+  .icons {
+    padding: 0 4%;
+  }
+  .scroll {
+    right: 4%;
+  }
 }
 @media (max-width: 1650px) {
-    :root{
-        --big-font: 5.5rem;
-        --p-font: 15px;
-    }
+  :root {
+    --big-font: 5.5rem;
+    --p-font: 15px;
+  }
 }
-@media (max-width: 1369px){
-    .icons{
-        display: none;
-    }
-    section{
-        padding: 0 4%;
-    }
+@media (max-width: 1369px) {
+  .icons {
+    display: none;
+  }
+  section {
+    padding: 0 4%;
+  }
 }
-@media (max-width: 1150px){
-    :root{
-        --big-font: 4.5rem;
-    }
-    .price{
-        font-size: 20px;
-    }
-    .btn{
-        padding: 10px 23px;
-    }
+@media (max-width: 1150px) {
+  :root {
+    --big-font: 4.5rem;
+  }
+  .price {
+    font-size: 20px;
+  }
+  .btn {
+    padding: 10px 23px;
+  }
 }
-@media (max-width: 950px){
-    #menu-icon{
-        display: block;
-    }
-    .navlist{
-        width: 100%;
-        height: 100vh;
-        position: absolute;
-        top: 0;
-        right: 0;
-        left:100%;
-        bottom: 0;
-        display: flex;
-        flex-direction: column;
-        padding: 100px 50px;
-        backdrop-filter: blur(32px);
-        transition: all .6s ease-in-out;
-    }
-    .navlist a{
-        display: block;
-        padding: 0;
-        margin: 0px 0px 20px 0px;
-        font-size: 2.7rem;
-        text-align: center;
-    }
-    .navlist a:hover{
-        color: var(--main-color);
-    }
-    .navlist.open{
-        left: 0;
-    }
+@media (max-width: 950px) {
+  #menu-icon {
+    display: block;
+  }
+  .navlist {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 100%;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 100px 50px;
+    backdrop-filter: blur(32px);
+    transition: all 0.6s ease-in-out;
+  }
+  .navlist a {
+    display: block;
+    padding: 0;
+    margin: 0px 0px 20px 0px;
+    font-size: 2.7rem;
+    text-align: center;
+  }
+  .navlist a:hover {
+    color: var(--main-color);
+  }
+  .navlist.open {
+    left: 0;
+  }
 }
-@media (max-width: 890px){
-       scroll{
-        display: none;
-       }
-       .hero{
-        grid-template-columns: 1fr;
-        height: auto;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-       }
-       .hero-text{
-        padding-top: 130px;
-        align-items: center;
-        margin-left: 80px;
-        text-align: center;
-        justify-content: center;
-       }
-       .hero-img{
-        height: 500px;
-        width: 500px;
-        margin: 0 auto;
-        object-fit: contain;
-       }
-       .main-hero{
-        align-items: center;
-        justify-content: center;
-       }
+@media (max-width: 890px) {
+  scroll {
+    display: none;
+  }
+  .hero {
+    grid-template-columns: 1fr;
+    height: auto;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  .hero-text {
+    padding-top: 130px;
+    align-items: center;
+    margin-left: 80px;
+    text-align: center;
+    justify-content: center;
+  }
+  .hero-img {
+    height: 500px;
+    width: 500px;
+    margin: 0 auto;
+    object-fit: contain;
+  }
+  .main-hero {
+    align-items: center;
+    justify-content: center;
+  }
 }
